# videoRust

./: .gitignore  Cargo-console.toml  Cargo.toml  README.md
crates/vision_core/: Cargo.toml  README.md
crates/vision_core/src/: lib.rs  lib_fast_resize.rs
crates/vision_ffi/: Cargo.toml  README.md
crates/vision_ffi/src/: lib.rs
models/: yunet_n_640_640.onnx
src/: main.rs  mainConsole.rs  pic_analizer.rs
tests/vision_core/: Cargo.toml  README.md
tests/vision_core/src/: main.rs
