[package]
name = "vision-core"
version = "0.1.0"
edition = "2021"
default-run = "vision-core"

[workspace]
members = ["crates/vision_core", "crates/vision_ffi"]
resolver = "2"

[[bin]]
name = "checkRtspFps"
path = "src/bin/checkRtspFps.rs"

[[bin]]
name = "face_detection"
path = "src/bin/face_detection.rs"

[[bin]]
name = "picAnalizer"
path = "src/bin/picAnalizer.rs"

[dependencies]
anyhow = "1"
image = "0.25"
minifb = "0.27"
vision_core = { path = "crates/vision_core" }
ctrlc = "3"
